Flocking Algorithm in Unity, Part 5B: Steered Cohesion Behavior

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\BehaviorScripts\AvoidanceBehavior.cs" />
     <Compile Include="Assets\BehaviorScripts\CohesionBehavior.cs" />
     <Compile Include="Assets\BehaviorScripts\CompositeBehavior.cs" />
+    <Compile Include="Assets\BehaviorScripts\SteeredCohesionBehavior.cs" />
     <Compile Include="Assets\Flock.cs" />
     <Compile Include="Assets\FlockAgent.cs" />
     <Compile Include="Assets\FlockBehavior.cs" />
